JSnack 2 - added output on screen HTML

--- a/js-jsnack2/index.html
+++ b/js-jsnack2/index.html
@@ -20,7 +20,16 @@
           <h2>Names &amp; Numbers</h2>
         </div>
         <div class="row">
-          <p>Check in Console</p>
+          <div id="results">
+            <h3>Results</h3>
+            <p>The list of names selected by the user is:</p>
+            <p></p> <!-- Here the results will be printed -->
+          </div>
+        </div>
+        <div class="row">
+          <div id="console">
+            <p>Check in Console</p>
+          </div>
         </div>
       </div>    <!-- End of container -->
     </div>    <!-- End of page wrapper -->
