--- a/js-jsnack3/index.html
+++ b/js-jsnack3/index.html
@@ -20,7 +20,16 @@
           <h2>Random Letters in "Position"</h2>
         </div>
         <div class="row">
-          <p>Check in Console</p>
+          <div id="results">
+            <h3>Results</h3>
+            <p>The movies list is:</p>
+            <!-- Here the results will be printed -->
+          </div>
+        </div>
+        <div class="row">
+          <div id="console">
+            <p>Check in Console</p>
+          </div>
         </div>
       </div>    <!-- End of container -->
     </div>    <!-- End of page wrapper -->
